# quest2-shader-segfault

./: Cargo.toml  README.md
src/: failing_shader.spv  failing_shader.wgsl  lib.rs
