[package]
name = "quest2-shader-segfault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37", default-features = false, features = ["loaded"] }
ctrlc = "3.1.5"
openxr = "0.16.0"
ndk-context = "0.1"
ndk-glue = "0.6.2"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
runtime_libs = "libs"

[package.metadata.android.application.activity]
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = "false"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "com.oculus.intent.category.VR",
    "android.intent.category.LAUNCHER",
]

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 26
